<resources>
    <string name="app_name">EbookManager</string>
    <string name="topBooks">Top E Books</string>
    <string name="about_us">about_us</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">logout</string>
    <string name="others">others</string>
    <string name="support">support</string>
    <string name="settings">settings</string>
    <string name="profile_name">Krupa</string>
    <string name="verified">Verified</string>
    <string name="sorted">Sorted</string>
    <string name="ratings">Ratings</string>
    <string name="votes">Votes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1150230095810831</string>
    <string name="facebook_client_token">ae688b14c28d418d41f75af74a969a4f</string>
</resources>