<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/topbooks"
        android:icon="@drawable/top_e_books"
        android:title="@string/topBooks"/>

    <item android:id="@+id/wishlist"
        android:icon="@drawable/wishlist"
        android:title="@string/wishlist"/>

    <item android:title="@string/others">

        <menu>

            <item android:id="@+id/menuSupport"
                android:icon="@drawable/support"
                android:title="@string/support"/>

            <item android:id="@+id/about_us"
                android:icon="@drawable/about_us"
                android:title="@string/about_us"/>

            <item android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>

        </menu>
    </item>
</menu>